public class Case {
    private int valeur;
}
