@startuml
'https://plantuml.com/class-diagram

 class Grille {
arraylist<Bloc>
int taille
methode()
}
class Bloc {
arraylist<Case>
}

class Ligne {
int index
}


Grille o-- Bloc
Bloc o-- Case
Bloc <|-- Ligne
Bloc <|-- Colonne

class Colonne {
int index
}
class Case {
int (x,y)
int valeur
}






@enduml
